--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,7 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost/test
+
+logging:
+  level:
+    org.springframework.data.mongodb.core: DEBUG
